# code-smriti

./: .env.example  .gitignore  .installation-summary.txt  .mcp.json.example  CLAUDE.md  INGESTION.md  INSTALL.md  PIPELINE.md  README-INSTALL.txt  README.md  SSL-SETUP.md  TODO.md  check_chunks_per_repo.py  check_repos.py  clone-repos.sh  docker-compose.yml  pyproject.toml  quick-install-headless.sh  repos_to_ingest.txt  run-ingestion-native.sh  run-ingestion.sh  run_reingestion.sh
.archive/: DEDUPLICATION_ISSUE.md  IMPROVEMENTS.md  LABCORE_INSTRUCTIONS.md  SESSION_STATE.md  benchmark_models.py  evaluation_scores.json
.claude/: settings.json  settings.local.json
0-setup/: README.md
1-config/: .env.template  README.md  repos_to_ingest.txt
2-initialize/: README.md  create-database-indexes  create-index  create-user-buckets.sh  pipeline_ingestion.py  reingest_all.py  verify-data
3-maintain/: README-INCREMENTAL-UPDATE.md  README.md  health-check  incremental_update.py  monitor  run-incremental-update  update-repos
4-consume/: README.md  benchmark_results.json  benchmark_results.json.old
config/: repos_to_ingest.txt.example
docs/: API.md  DOCKER-OPTIONS.md  FTS_VECTOR_SEARCH.md  MCP-USAGE.md  MULTITENANCY.md  QUICKSTART.md  RAG_PIPELINE_ARCHITECTURE.md  V4_INGESTION.md  V4_RAG_MIGRATION.md  V4_RAG_TOOLS_DESIGN.md  V4_SCHEMA_SPEC.md  WEB-UI-PRD.md
evals/: __init__.py  rag_quality.py  run_v4_eval.py  schema_coverage.py  search_quality.py  v4_eval_questions.json
landing/: index.html
services/cos-mcp-server/: .env.example  cos_mcp_server.py  pyproject.toml
(+535 files in other folders)
