[project]
name = "cos-mcp-server"
version = "0.1.0"
description = "Chief of Staff MCP Server - Personal productivity tools for Claude Code"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
cos-mcp = "cos_mcp_server:mcp.run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
